force-app/main/default/objects/OnesJunior__c/OnesJunior__c.object-meta.xml
<CustomObject>
    <label>後輩</label>
    <nameField>
        <label>後輩名</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>後輩</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>