force-app/main/default/objects/OnesJunior__c/fields/ApprochForInitiation__c.field-meta.xml
<CustomField>
    <fullName>ApprochForInitiation__c</fullName>
    <label>入信までのアプローチ回数</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>