force-app/main/default/objects/OnesJunior__c/fields/DateOfConversion__c.field-meta.xml
<CustomField>
    <fullName>DateOfConversion__c</fullName>
    <label>入信日</label>
    <type>Date</type>
</CustomField>