force-app/main/default/objects/OnesJunior__c/fields/NumberForKesshu__c.field-meta.xml
<CustomField>
    <fullName>NumberForKesshu__c</fullName>
    <label>結集への呼びかけ回数</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>