force-app/main/default/objects/OnesJunior__c/fields/PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>PhoneNumber__c</fullName>
    <label>電話番号</label>
    <type>Phone</type>
</CustomField>