force-app/main/default/objects/OnesJunior__c/fields/TargetAudience__c.field-meta.xml
<CustomField>
    <fullName>TargetAudience__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>対象者</label>
    <referenceTo>TargetAudience__c</referenceTo>
    <relationshipLabel>後輩</relationshipLabel>
    <relationshipName>targetAudiences</relationshipName>
    <type>Lookup</type>
</CustomField>